--- a/01jquery_hide_show.html
+++ b/01jquery_hide_show.html
@@ -55,9 +55,9 @@
             //   })
 
 
-              $('#btn3').click(function (){
+              $('.x').click(function (){
 
-                $('.x').toggle(1000);
+                $('p').toggle(1000);
                })
 
              
